# taxonomy-tree

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
examples/: usage.py
python/taxonomy_tree/: __init__.py  build.py  taxonomy.py  taxonomy_tree.pyi
scripts/: create.py
src/: builder.rs  cache.rs  iterators.rs  lib.rs  tree.rs
src/taxonomy_tree/: __init__.py  taxonomy.py
tests/: test_taxonomy.py
