[project]
name = "taxonomy-tree"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.29.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "pytest>=8.3.5",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["python/taxonomy_tree", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
